# CADRelay

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/core/: auth.py  config.py
backend/app/schemas/: models.py
backend/app/services/: firebase_auth_admin.py  firebase_storage.py  firestore_db.py  local_db.py  metadata_store.py  queue.py  queue_backend.py  storage.py  storage_store.py  three_mf.py  worker_runner.py
backend/scripts/: set_firebase_role.py
backend/tests/: conftest.py  test_3mf_thumbnail_api.py  test_account_deletion.py  test_converter_smoke.py  test_explore_api.py  test_model_categories_api.py  test_model_edit_api.py  test_pipeline_integration.py  test_queue_backend.py  test_saved_models_api.py
docs/: API.md  BACKLOG.md  DECISIONS.md  MVP_PLAN.md  NEXT_STEPS.md  WORKLOG.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: GlbViewer.jsx  ModelDetailPanel.jsx  ModelEditPanel.jsx
frontend/src/lib/: errorMessages.js  firebaseAuth.js  thumbnail.js  useFavorites.js  useWorkspaceAuth.js  workspaceApi.js
frontend/src/router/: AppRouter.jsx
frontend/src/shell/: AppShell.jsx
frontend/src/styles/: main.scss
frontend/src/views/: AdminCategoriesPage.jsx  AdminUsersPage.jsx  AuthPage.jsx  (+4 more)
scripts/: check.ps1  run_backend.ps1  run_backend.sh  run_dev.ps1  run_worker.ps1  run_worker.sh
worker/: README.md
worker/app/: converter.py  main.py
