[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadrelay-services"
version = "0.1.0"
description = "Backend and worker services for CADRelay MVP"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.9",
  "google-cloud-firestore>=2.21.0",
  "google-cloud-storage>=3.4.1",
  "firebase-admin>=7.1.0",
  "gmsh>=4.14.1",
  "trimesh>=4.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
